--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql+asyncpg://danielnuske@localhost:5432/cronhooks
+DATABASE_URL_PSY=postgresql+psycopg2://danielnuske@localhost:5432/cronhooks
