--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.78.0
 fastapi-users[sqlalchemy]
 uvicorn[standard]
-
 alembic
-asyncpg
-
 aiosqlite
+sqlalchemy_utils==0.38.3
+asyncpg
+psycopg2==2.9.3
+python-dotenv
