--- a/.github/workflows/digitalocean.yml
+++ b/.github/workflows/digitalocean.yml
@@ -9,6 +9,9 @@ jobs:
   deploy:
     name: Deploy to DO
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DATABASE_URL_PSY: ${{ secrets.DATABASE_URL_PSY }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3
