--- a/.github/workflows/digitalocean.yml
+++ b/.github/workflows/digitalocean.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: install openssl
-      run: apt install openssl
+      run: sudo apt install openssl
 
     - name: install necessary packages
       run: pip install -r requirements.txt
