--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ psycopg2==2.9.3
 python-dotenv
 httpx==0.23.0
 croniter==1.3.7
-cryptography>=2.8
-pyOpenSSL=22.0
+cryptography>==2.8
+pyOpenSSL==22.0
