--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,9 @@ services:
      - DD_API_KEY=a69ac2c24e013c925071ca5d40958064
      - DD_ENV="prod"
      - DD_LOGS_INJECTION=true
-     - DD_TRACE_DEBUG=true
      - DD_TRACE_STARTUP_LOGS=true
+     - DD_TRACE_DEBUG=true
+     - DD_LOG_LEVEL=debug
     networks:
       - local-net
 
